<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="#f5deb3" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_result"
        android:textSize="20sp"
        android:layout_marginTop="50dp"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/star" />

    <TextView
        android:id="@+id/resultLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/result_score"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/totalScoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_total_score"
        android:textSize="20sp"
        android:layout_marginTop="60dp"/>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="1dp">

        <Button
            android:background="@drawable/btn1"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_marginTop="80dp"
            android:onClick="returnTop"
            android:text="Quiz Again"
            android:textSize="18sp" />

        <Button
            android:background="@drawable/btn2"
            android:id="@+id/buttonRstart"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="80dp"
            android:text="Menu"
            android:textSize="18sp" />

        <Button
            android:background="@drawable/btn3"
            android:id="@+id/buttonTest"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="80dp"
            android:text="Mistakes"
            android:textSize="18sp" />


    </LinearLayout>

</LinearLayout>
